docs : 서브 페이지 공통 스타일 작업

--- a/html/nh-intr.html
+++ b/html/nh-intr.html
@@ -51,7 +51,45 @@
       </div>
     </header>
     <main class="main">
-      
+      <section class="sub-location">
+        <h2 class="hide">현재 서브 페이지 위치</h2>
+        <div class="center">
+          <div class="content">
+            <div class="location">
+              <div>
+                <a href="a#">HOME</a>
+                <a href="a#">새롭게</a>
+                <a href="a#">
+                  <span class="point">NHmembers 소개</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="sub-page-title">
+        <h2 class="hide">서브 페이지 영역 제목</h2>
+        <div class="center">
+          <div class="content">
+            <h3 class="sub-desc">NHmembers 소개</h3>
+          </div>
+        </div>
+      </section>
+      <section class="sub-banner">
+        <h2 class="hide">배너 영역</h2>
+        <div class="center">
+          <div class="content">
+            <div class="banner">
+              <div class="bg">
+                <div class="text-content">
+                  <h3 class="sub-desc">풍부하고 편리한 <em class="point">NHmembers 서비스</em></h3>
+                  <p class="sub-text">NHmembers는 대한민국의 금융과 유통 분야를 선도하는 농협 16개 제휴사의 다양한 거래·제휴 혜택을 편리하게 이용할 수 있는 통합멤버십서비스입니다. NHpoint는 NHmembers의 다양한 서비스 이용 시 적립되는 포인트로 농협 및 다양한 외부 제휴사에서 현금처럼 이용가능 합니다.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="center">
