--- a/html/main.html
+++ b/html/main.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="gnb-content">
-          <a href="a#" class="logo">
+          <a href="../html/main.html" class="logo">
             <h1 class="hide">NH멤버스 로고</h1>
           </a>
           <button class="menu-btn">
