--- a/html/nh-intr.html
+++ b/html/nh-intr.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="gnb-content">
-          <a href="a#" class="logo">
+          <a href="../html/main.html" class="logo">
             <h1 class="hide">NH멤버스 로고</h1>
           </a>
           <button class="menu-btn">
@@ -80,11 +80,10 @@
         <div class="center">
           <div class="content">
             <div class="banner">
-              <div class="bg">
-                <div class="text-content">
-                  <h3 class="sub-desc">풍부하고 편리한 <em class="point">NHmembers 서비스</em></h3>
-                  <p class="sub-text">NHmembers는 대한민국의 금융과 유통 분야를 선도하는 농협 16개 제휴사의 다양한 거래·제휴 혜택을 편리하게 이용할 수 있는 통합멤버십서비스입니다. NHpoint는 NHmembers의 다양한 서비스 이용 시 적립되는 포인트로 농협 및 다양한 외부 제휴사에서 현금처럼 이용가능 합니다.</p>
-                </div>
+              <div class="bg"></div>
+              <div class="text-content">
+                <h3 class="sub-desc">풍부하고 편리한 <em class="point">NHmembers 서비스</em></h3>
+                <p class="sub-text">NHmembers는 대한민국의 금융과 유통 분야를 선도하는 농협 16개 제휴사의 다양한 거래·<br>제휴 혜택을 편리하게 이용할 수 있는 통합멤버십서비스입니다. NHpoint는 NHmembers의 <br>다양한 서비스 이용 시 적립되는 포인트로 농협 및 다양한 외부 제휴사에서 현금처럼 <br>이용가능 합니다.</p>
               </div>
             </div>
           </div>
