feat : 서브 페이지 (새롭게, NHpoint 혜택 추가)

--- a/html/nh-intr.html
+++ b/html/nh-intr.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </header>
-    <main class="main">
+    <main class="sub">
       <section class="sub-location">
         <h2 class="hide">현재 서브 페이지 위치</h2>
         <div class="center">
@@ -84,6 +84,57 @@
               <div class="text-content">
                 <h3 class="sub-desc">풍부하고 편리한 <em class="point">NHmembers 서비스</em></h3>
                 <p class="sub-text">NHmembers는 대한민국의 금융과 유통 분야를 선도하는 농협 16개 제휴사의 다양한 거래·<br>제휴 혜택을 편리하게 이용할 수 있는 통합멤버십서비스입니다. NHpoint는 NHmembers의 <br>다양한 서비스 이용 시 적립되는 포인트로 농협 및 다양한 외부 제휴사에서 현금처럼 <br>이용가능 합니다.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="nhpoint-event">
+        <div class="center">
+          <div class="content">
+            <div class="event">
+              <h5 class="sub-content-title">NHpoint 혜택</h5>
+              <div class="content-center">
+                <div class="point-set">
+                  <p>다양하고 알뜰한 <em class="point">포인트 적립</em></p>
+                </div>
+                <ul class="event-list">
+                  <li class="list">
+                    <span class="icon icon01"></span>
+                    <div class="text-content">
+                      <span class="list-desc">거래나 서비스 이용으로 적립하기</span>
+                      <p class="list-text">하나로마트에서 물건을 살때! 농협은행에서 <br> 예금을 가입할 때! 일상생활에서 만나는 농협의 <br> 서비스를 이용할 때마다 포인트가 적립됩니다. <br><em class="list-point">*포인트 연계 상품 한정</em></p>
+                    </div>
+                  </li>
+                  <li class="list">
+                    <span class="icon icon02"></span>
+                    <div class="text-content">
+                      <span class="list-desc">Fun! Fun! 게임으로 적립하기</span>
+                      <p class="list-text">출석체크, 럭키룰렛, 터치슬롯까지 <br>NHmembers App에서 제공하는 다양한 게임을 <br>재밌게 이용하다보면 어느샌가 행운의 <br>포인트가 가득!</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="content-center">
+                <div class="point-set">
+                  <p>현명하고 손쉬운 <em class="point">포인트 사용</em></p>
+                </div>
+                <ul class="event-list">
+                  <li class="list">
+                    <span class="icon icon01"></span>
+                    <div class="text-content">
+                      <span class="list-desc">현금처럼 편하게 사용하기</span>
+                      <p class="list-text">계좌로 출금하거나, 구입물품을 결제하거나, <br> 수수료를 낼 때에도 NHpoint를 이용해 <br>보세요. 최소 1포인트부터 어디서든지 <br>현금처럼 이용가능합니다.</p>
+                    </div>
+                  </li>
+                  <li class="list">
+                    <span class="icon icon02"></span>
+                    <div class="text-content">
+                      <span class="list-desc">친구에게 보내기&기부하기</span>
+                      <p class="list-text">계좌이체가 번거로우세요? 복잡한 절차없이 <br>NHpoint를 App에서 바로 보내세요. 기부 단체에 <br>포인트 기부도 가능합니다. 포인트로 <br>지인들과 정을 나누고, 우리 농촌을 살리세요.</p>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
