feat : 서브 페이지 (새롭게, NHpoint 제휴사 태블릿 추가)

--- a/html/nh-intr.html
+++ b/html/nh-intr.html
@@ -30,6 +30,9 @@
           </div>
         </div>
         <div class="gnb-content">
+          <a href="../html/main.html" class="mobile-prev">
+            <h2 class="hide">이전 페이지로 바로가기</h2>
+          </a>
           <a href="../html/main.html" class="logo">
             <h1 class="hide">NH멤버스 로고</h1>
           </a>
