--- a/html/nh-intr.html
+++ b/html/nh-intr.html
@@ -41,12 +41,49 @@
           <button class="menu-btn">
             <h2 class="hide">메뉴</h2>
           </button>
-          <nav>
+          <nav class="nav-bar">
             <h2 class="hide">대메뉴</h2>
             <ul class="gnb">
-              <li><a href="a#">새롭게,</a></li>
-              <li><a href="a#">선보이다.</a></li>
-              <li><a href="a#">NHpoint</a></li>
+              <li class="gnb-list">
+                <a href="../html/nh-intr.html" class="gnb-link">새롭게,</a>
+                <ul class="gnb-lnb">
+                  <li class="lnb-list"><a href="a#">NHmembers 소개</a></li>
+                  <li class="lnb-list"><a href="a#">BI 소개</a></li>
+                  <li class="lnb-list"><a href="a#">NHmembers 카드 소개</a></li>
+                  <li class="lnb-list"><a href="a#">브랜드 소개</a></li>
+                </ul>
+              </li>
+              <li class="gnb-list">
+                <a href="a#" class="gnb-link">선보이다.</a>
+                <ul class="gnb-lnb">
+                  <li class="lnb-list"><a href="a#">APP 소개</a></li>
+                  <li class="lnb-list"><a href="a#">이벤트</a></li>
+                  <li class="lnb-list"><a href="a#">쿠폰</a></li>
+                </ul>
+              </li>
+              <li class="gnb-list">
+                <a href="a#" class="gnb-link">NHpoint</a>
+                <ul class="gnb-lnb gnb-lnb03">
+                  <li class="lnb-list lnb-list03">
+                    <a href="a#">충전</a>
+                    <div>
+                      <a href="a#">- 동전 충전</a>
+                      <a href="a#">- 신용카드 결제 충전</a>
+                    </div>
+                  </li>
+                  <li class="lnb-list lnb-list03">
+                    <a href="a#">전환</a>
+                    <div>
+                      <a href="a#">- 쿠폰 전환</a>
+                      <a href="a#">- 모바일 상품권 전환</a>
+                      <a href="a#">- 제휴사 포인트 전환</a>
+                    </div>
+                  </li>
+                  <li class="lnb-list lnb-list03"><a href="a#">기부</a></li>
+                  <li class="lnb-list lnb-list03"><a href="a#">선물</a></li>
+                  <li class="lnb-list lnb-list03"><a href="a#">캐시백</a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
           <button class="search">
