feat : 스크롤 이벤트 추가
feat : 메인 (콘텐츠 애니메이션 추가)

--- a/html/main.html
+++ b/html/main.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/tablet.css" media="all and (min-width: 758px) and (max-width: 1000px)">
   <link rel="stylesheet" href="../css/moblie.css" media="all and (min-width: 0px) and (max-width: 757px)">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  <script src="../js/main.js"></script>
   <title>NH멤버스 - 반응형 포트폴리오</title>
 </head>
 <body>
@@ -127,7 +130,7 @@
       <section class="renefits">
         <h2 class="hide">NH포인트 혜택보기</h2>
         <div class="center">
-          <div class="content">
+          <div class="content motion">
             <div class="text-box">
               <img src="../images/renefits-imgfont.png" alt="농협 통합 멤버스 로그인">
               <strong>혜택보기</strong>
@@ -154,7 +157,7 @@
       <section class="main-event">
         <h2 class="hide">이벤트 영역</h2>
         <div class="center">
-          <div class="content">
+          <div class="content motion">
             <ul class="banner">
               <li class="list">
                 <img src="../images/event-banner01.jpg" alt="">
@@ -180,12 +183,12 @@
           </div>
         </div>
       </section>
-      <section class="card">
+      <section class="card motion">
         <h2 class="hide">모바일 앱 다운로드 혜택</h2>
         <div class="center">
           <div class="content">
             <ul class="list">
-              <li>
+              <li class="motion">
                 <a href="">
                   <span class="icon icon01"></span>
                   <div class="text-box">
@@ -195,7 +198,7 @@
                   <span class="circle-arr"></span>
                 </a>
               </li>
-              <li>
+              <li class="motion">
                 <a href="">
                   <span class="icon icon02"></span>
                   <div class="text-box">
@@ -205,7 +208,7 @@
                   <span class="circle-arr"></span>
                 </a>
               </li>
-              <li>
+              <li class="motion">
                 <a href="">
                   <span class="icon icon03"></span>
                   <div class="text-box">
@@ -215,7 +218,7 @@
                   <span class="circle-arr"></span>
                 </a>
               </li>
-              <li>
+              <li class="motion">
                 <a href="">
                   <span class="icon icon04"></span>
                   <div class="text-box">
@@ -229,7 +232,7 @@
           </div>
         </div>
       </section>
-      <section class="app">
+      <section class="app motion">
         <h2 class="hide">NH멤버스 앱 다운로드</h2>
         <div class="bg">
           <div class="center">
