refactor : 반응형 웹 수정
메인: 헤더, 비주얼, 콘텐츠

--- a/html/main.html
+++ b/html/main.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/tablet.css" media="all and (min-width: 758px) and (max-width: 1000px)">
-  <link rel="stylesheet" href="../css/moblie.css" media="all and (min-width: 0px) and (max-width: 757px)">
+  <link rel="stylesheet" href="../css/tablet.css" media="all and (min-width: 768px) and (max-width: 1024px)">
+  <link rel="stylesheet" href="../css/moblie.css" media="all and (min-width: 0px) and (max-width: 767px)">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <script src="../js/main.js"></script>
@@ -132,7 +132,8 @@
         <div class="center">
           <div class="content motion">
             <div class="text-box">
-              <img src="../images/renefits-imgfont.png" alt="농협 통합 멤버스 로그인">
+              <img src="../images/renefits-imgfont.png" class="nhpoint-imgfont" alt="농협 통합 멤버스 로그인">
+              <img src="../images/m-renefits-imgfont.png" class="m-nhpoint-imgfont" alt="농협 통합 멤버스 로그인">
               <strong>혜택보기</strong>
             </div>
             <div class="nh-card">
