chore : a tag link none

--- a/html/main.html
+++ b/html/main.html
@@ -24,10 +24,10 @@
         <div class="user">
           <div>
             <ul>
-              <li><a href="a#">로그인</a></li>
-              <li><a href="a#">회원가입</a></li>
-              <li><a href="a#">나의 NH</a></li>
-              <li><a href="a#">고객센터</a></li>
+              <li><a href="#none">로그인</a></li>
+              <li><a href="#none">회원가입</a></li>
+              <li><a href="#none">나의 NH</a></li>
+              <li><a href="#none">고객센터</a></li>
             </ul>
             <button class="app-btn">
               <h2 class="hide">앱 다운로드</h2>
@@ -47,41 +47,41 @@
               <li class="gnb-list">
                 <a href="../html/nh-intr.html" class="gnb-link">새롭게,</a>
                 <ul class="gnb-lnb">
-                  <li class="lnb-list"><a href="a#">NHmembers 소개</a></li>
-                  <li class="lnb-list"><a href="a#">BI 소개</a></li>
-                  <li class="lnb-list"><a href="a#">NHmembers 카드 소개</a></li>
-                  <li class="lnb-list"><a href="a#">브랜드 소개</a></li>
+                  <li class="lnb-list"><a href="#none">NHmembers 소개</a></li>
+                  <li class="lnb-list"><a href="#none">BI 소개</a></li>
+                  <li class="lnb-list"><a href="#none">NHmembers 카드 소개</a></li>
+                  <li class="lnb-list"><a href="#none">브랜드 소개</a></li>
                 </ul>
               </li>
               <li class="gnb-list">
-                <a href="a#" class="gnb-link">선보이다.</a>
+                <a href="#none" class="gnb-link">선보이다.</a>
                 <ul class="gnb-lnb">
-                  <li class="lnb-list"><a href="a#">APP 소개</a></li>
-                  <li class="lnb-list"><a href="a#">이벤트</a></li>
-                  <li class="lnb-list"><a href="a#">쿠폰</a></li>
+                  <li class="lnb-list"><a href="#none">APP 소개</a></li>
+                  <li class="lnb-list"><a href="#none">이벤트</a></li>
+                  <li class="lnb-list"><a href="#none">쿠폰</a></li>
                 </ul>
               </li>
               <li class="gnb-list">
-                <a href="a#" class="gnb-link">NHpoint</a>
+                <a href="#none" class="gnb-link">NHpoint</a>
                 <ul class="gnb-lnb gnb-lnb03">
                   <li class="lnb-list lnb-list03">
-                    <a href="a#">충전</a>
+                    <a href="#none">충전</a>
                     <div>
-                      <a href="a#">- 동전 충전</a>
-                      <a href="a#">- 신용카드 결제 충전</a>
+                      <a href="#none">- 동전 충전</a>
+                      <a href="#none">- 신용카드 결제 충전</a>
                     </div>
                   </li>
                   <li class="lnb-list lnb-list03">
-                    <a href="a#">전환</a>
+                    <a href="#none">전환</a>
                     <div>
-                      <a href="a#">- 쿠폰 전환</a>
-                      <a href="a#">- 모바일 상품권 전환</a>
-                      <a href="a#">- 제휴사 포인트 전환</a>
+                      <a href="#none">- 쿠폰 전환</a>
+                      <a href="#none">- 모바일 상품권 전환</a>
+                      <a href="#none">- 제휴사 포인트 전환</a>
                     </div>
                   </li>
-                  <li class="lnb-list lnb-list03"><a href="a#">기부</a></li>
-                  <li class="lnb-list lnb-list03"><a href="a#">선물</a></li>
-                  <li class="lnb-list lnb-list03"><a href="a#">캐시백</a></li>
+                  <li class="lnb-list lnb-list03"><a href="#none">기부</a></li>
+                  <li class="lnb-list lnb-list03"><a href="#none">선물</a></li>
+                  <li class="lnb-list lnb-list03"><a href="#none">캐시백</a></li>
                 </ul>
               </li>
             </ul>
@@ -98,9 +98,9 @@
         <div class="control">
           <div>
             <h2 class="hide">슬라이드 버튼</h2>
-            <a href="a#" class="circle view-circle"><span class="hide">첫 번째 슬라이드 버튼</span></a>
-            <a href="a#" class="circle"><span class="hide">두 번째 슬라이드 버튼</span></a>
-            <a href="a#" class="circle"><span class="hide">세 번째 슬라이드 버튼</span></a>
+            <a href="#none" class="circle view-circle"><span class="hide">첫 번째 슬라이드 버튼</span></a>
+            <a href="#none" class="circle"><span class="hide">두 번째 슬라이드 버튼</span></a>
+            <a href="#none" class="circle"><span class="hide">세 번째 슬라이드 버튼</span></a>
           </div>
         </div>
         <ul class="slider">
@@ -111,7 +111,7 @@
                 <div class="text-box">
                   <span class="desc">농협의 새로운<br class="br01"> 통합멤버십<br><strong>NHmembers</strong></span>
                   <p class="text">NHmembers앱을 다운받고 다양한 혜택과 함께<br> 새로워진 NH멤버스를 만나보세요~</p>
-                  <a href="" class="more">
+                  <a href="#none" class="more">
                     <span>자세히 보기</span>
                   </a>
                 </div>
@@ -121,7 +121,7 @@
         </ul>
         <div class="login">
           <div>
-            <a href="a#">
+            <a href="#none">
               <h2 class="hide">농협멤버스 로그인</h2>
             </a>
           </div>
@@ -148,7 +148,7 @@
               </div>
             </div>
             <div class="more-link-content">
-              <a href="a#" class="more-link">
+              <a href="#none" class="more-link">
                 <span>카드소개 바로가기</span>
               </a>
             </div>
@@ -165,16 +165,16 @@
                 <div class="control">
                   <div>
                     <h2 class="hide">슬라이드 버튼</h2>
-                    <a href="a#" class="circle view-circle"><span class="hide">첫 번째 슬라이드 버튼</span></a>
-                    <a href="a#" class="circle"><span class="hide">두 번째 슬라이드 버튼</span></a>
-                    <a href="a#" class="circle"><span class="hide">세 번째 슬라이드 버튼</span></a>
+                    <a href="#none" class="circle view-circle"><span class="hide">첫 번째 슬라이드 버튼</span></a>
+                    <a href="#none" class="circle"><span class="hide">두 번째 슬라이드 버튼</span></a>
+                    <a href="#none" class="circle"><span class="hide">세 번째 슬라이드 버튼</span></a>
                   </div>
                 </div>
                 <div class="text-box">
                   <span class="desc">수산물 상생할인 수산인의 날 특별전<br><strong>행사상품 20% 할인 (1인 최대 1만원)</strong></span>
                   <p class="text">기간 : 2021.04.01.~2021.04.07.</p>
                   <div class="more-link-content">
-                    <a href="a#" class="more-link">
+                    <a href="#none" class="more-link">
                       <span>카드소개 바로가기</span>
                     </a>
                   </div>
@@ -190,7 +190,7 @@
           <div class="content">
             <ul class="list">
               <li class="motion">
-                <a href="">
+                <a href="#none">
                   <span class="icon icon01"></span>
                   <div class="text-box">
                     <strong>출석체크</strong>
@@ -200,7 +200,7 @@
                 </a>
               </li>
               <li class="motion">
-                <a href="">
+                <a href="#none">
                   <span class="icon icon02"></span>
                   <div class="text-box">
                     <strong>출석체크</strong>
@@ -210,7 +210,7 @@
                 </a>
               </li>
               <li class="motion">
-                <a href="">
+                <a href="#none">
                   <span class="icon icon03"></span>
                   <div class="text-box">
                     <strong>출석체크</strong>
@@ -220,7 +220,7 @@
                 </a>
               </li>
               <li class="motion">
-                <a href="">
+                <a href="#none">
                   <span class="icon icon04"></span>
                   <div class="text-box">
                     <strong>출석체크</strong>
@@ -244,8 +244,8 @@
                   <span class="desc"><strong>NHmembers <br></strong>APP DOWNLOAD</span>
                   <p class="text">친구와 함께 NHmembers APP에서 제공하는 다양한 혜택과 <br>서비스를 만나보세요! NHmembers 제휴사에서 새로워진 APP을 <br>통해 포인트를 적립하고 어디서나 현금처럼 편리하게 <br>사용할 수 있는 통합 서비스 입니다.</p>
                   <div class="app-down">
-                    <a href="" class="google-play">구글 플레이</a>
-                    <a href="" class="app-store">애플 스토어</a>
+                    <a href="#none" class="google-play">구글 플레이</a>
+                    <a href="#none" class="app-store">애플 스토어</a>
                   </div>
                 </div>
               </div>
@@ -259,20 +259,25 @@
         <div class="content">
           <span class="logo"></span>
           <ul class="info">
-            <li><a href="a#">사이트맵</a></li>
-            <li><a href="a#">이용약관</a></li>
-            <li><a href="a#">개인정보처리방침</a></li>
-            <li><a href="a#">개인정보 이용 · 제공내역 조회 안내</a></li>
+            <li><a href="#none">사이트맵</a></li>
+            <li><a href="#none">이용약관</a></li>
+            <li><a href="#none">개인정보처리방침</a></li>
+            <li><a href="#none">개인정보 이용 · 제공내역 조회 안내</a></li>
           </ul>
           <address>(04517) 서울시 중구 통일로 120 (중구 충정로 1가) 사업자등록번호 : 104-86-39742. 콜센터 : 1644-7226</address>
           <p class="copyrigth">Copyright 2018. NHmembers All rights reserved.</p>
           <div class="refe">
-            <a href="a#" class="wa">웹 접근성 인증 로고</a>
-            <a href="a#" class="qr">QR코드</a>
+            <a href="#none" class="wa">웹 접근성 인증 로고</a>
+            <a href="#none" class="qr">QR코드</a>
           </div>
         </div>
       </div>
     </footer>
   </div>
+  <script>
+    $(document).on('click', 'a[href="#none"]', function(e) {
+      e.preventDefault()
+    });
+  </script>
 </body>
 </html>
