--- a/html/nh-intr.html
+++ b/html/nh-intr.html
@@ -21,10 +21,10 @@
         <div class="user">
           <div>
             <ul>
-              <li><a href="a#">로그인</a></li>
-              <li><a href="a#">회원가입</a></li>
-              <li><a href="a#">나의 NH</a></li>
-              <li><a href="a#">고객센터</a></li>
+              <li><a href="#none">로그인</a></li>
+              <li><a href="#none">회원가입</a></li>
+              <li><a href="#none">나의 NH</a></li>
+              <li><a href="#none">고객센터</a></li>
             </ul>
             <button class="app-btn">
               <h2 class="hide">앱 다운로드</h2>
@@ -47,41 +47,41 @@
               <li class="gnb-list">
                 <a href="../html/nh-intr.html" class="gnb-link">새롭게,</a>
                 <ul class="gnb-lnb">
-                  <li class="lnb-list"><a href="a#">NHmembers 소개</a></li>
-                  <li class="lnb-list"><a href="a#">BI 소개</a></li>
-                  <li class="lnb-list"><a href="a#">NHmembers 카드 소개</a></li>
-                  <li class="lnb-list"><a href="a#">브랜드 소개</a></li>
+                  <li class="lnb-list"><a href="#none">NHmembers 소개</a></li>
+                  <li class="lnb-list"><a href="#none">BI 소개</a></li>
+                  <li class="lnb-list"><a href="#none">NHmembers 카드 소개</a></li>
+                  <li class="lnb-list"><a href="#none">브랜드 소개</a></li>
                 </ul>
               </li>
               <li class="gnb-list">
-                <a href="a#" class="gnb-link">선보이다.</a>
+                <a href="#none" class="gnb-link">선보이다.</a>
                 <ul class="gnb-lnb">
-                  <li class="lnb-list"><a href="a#">APP 소개</a></li>
-                  <li class="lnb-list"><a href="a#">이벤트</a></li>
-                  <li class="lnb-list"><a href="a#">쿠폰</a></li>
+                  <li class="lnb-list"><a href="#none">APP 소개</a></li>
+                  <li class="lnb-list"><a href="#none">이벤트</a></li>
+                  <li class="lnb-list"><a href="#none">쿠폰</a></li>
                 </ul>
               </li>
               <li class="gnb-list">
-                <a href="a#" class="gnb-link">NHpoint</a>
+                <a href="#none" class="gnb-link">NHpoint</a>
                 <ul class="gnb-lnb gnb-lnb03">
                   <li class="lnb-list lnb-list03">
-                    <a href="a#">충전</a>
+                    <a href="#none">충전</a>
                     <div>
-                      <a href="a#">- 동전 충전</a>
-                      <a href="a#">- 신용카드 결제 충전</a>
+                      <a href="#none">- 동전 충전</a>
+                      <a href="#none">- 신용카드 결제 충전</a>
                     </div>
                   </li>
                   <li class="lnb-list lnb-list03">
-                    <a href="a#">전환</a>
+                    <a href="#none">전환</a>
                     <div>
-                      <a href="a#">- 쿠폰 전환</a>
-                      <a href="a#">- 모바일 상품권 전환</a>
-                      <a href="a#">- 제휴사 포인트 전환</a>
+                      <a href="#none">- 쿠폰 전환</a>
+                      <a href="#none">- 모바일 상품권 전환</a>
+                      <a href="#none">- 제휴사 포인트 전환</a>
                     </div>
                   </li>
-                  <li class="lnb-list lnb-list03"><a href="a#">기부</a></li>
-                  <li class="lnb-list lnb-list03"><a href="a#">선물</a></li>
-                  <li class="lnb-list lnb-list03"><a href="a#">캐시백</a></li>
+                  <li class="lnb-list lnb-list03"><a href="#none">기부</a></li>
+                  <li class="lnb-list lnb-list03"><a href="#none">선물</a></li>
+                  <li class="lnb-list lnb-list03"><a href="#none">캐시백</a></li>
                 </ul>
               </li>
             </ul>
@@ -99,9 +99,9 @@
           <div class="content">
             <div class="location">
               <div>
-                <a href="a#">HOME</a>
-                <a href="a#">새롭게</a>
-                <a href="a#">
+                <a href="#none">HOME</a>
+                <a href="#none">새롭게</a>
+                <a href="#none">
                   <span class="point">NHmembers 소개</span>
                 </a>
               </div>
@@ -267,20 +267,25 @@
         <div class="content">
           <span class="logo"></span>
           <ul class="info">
-            <li><a href="a#">사이트맵</a></li>
-            <li><a href="a#">이용약관</a></li>
-            <li><a href="a#">개인정보처리방침</a></li>
-            <li><a href="a#">개인정보 이용 · 제공내역 조회 안내</a></li>
+            <li><a href="#none">사이트맵</a></li>
+            <li><a href="#none">이용약관</a></li>
+            <li><a href="#none">개인정보처리방침</a></li>
+            <li><a href="#none">개인정보 이용 · 제공내역 조회 안내</a></li>
           </ul>
           <address>(04517) 서울시 중구 통일로 120 (중구 충정로 1가) 사업자등록번호 : 104-86-39742. 콜센터 : 1644-7226</address>
           <p class="copyrigth">Copyright 2018. NHmembers All rights reserved.</p>
           <div class="refe">
-            <a href="a#" class="wa">웹 접근성 인증 로고</a>
-            <a href="a#" class="qr">QR코드</a>
+            <a href="#none" class="wa">웹 접근성 인증 로고</a>
+            <a href="#none" class="qr">QR코드</a>
           </div>
         </div>
       </div>
     </footer>
   </div>
+  <script>
+    $(document).on('click', 'a[href="#none"]', function(e) {
+      e.preventDefault()
+    });
+  </script>
 </body>
 </html>
